--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -21,6 +21,7 @@ img{
 }
 
 .container{
+    width: 95%;
     max-width: 120rem;
     margin: 0 auto;
 }
@@ -85,6 +86,13 @@ h4{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    text-align: center;
+}
+
+@media (min-width:768px) {
+    .contenido-header{
+        text-align: left;
+    }
 }
 
 .contenido-header h1{
@@ -95,10 +103,15 @@ h4{
 }
 
 .barra{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding-top: 3rem;
+}
+
+@media (min-width:768px) {
+    .barra{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
 
 
@@ -107,28 +120,67 @@ h4{
 .navegacion a{
     color: #ffff;
     text-decoration: none;
-    font-size: 1.8rem;
-    margin-right: 2rem;
+    font-size: 2.2rem;
+    display: block;
+}
+
+@media (min-width:768px) {
+    .navegacion a{
+        display: inline-block;
+        font-size: 1.8rem;
+        margin-right: 2rem;
+    }
+    .navegacion a:last-of-type{
+        margin-right: 0%;
+    }
 }
 
 .navegacion a:hover{
     color: gray;
 }
 
-.navegacion a:last-of-type{
-    margin-right: 0%;
+/* Mobil menu */
+.mobile-menu img{
+    width: 5rem;
+}
+
+@media (min-width:768px) {
+    .mobile-menu{
+        display: none;
+    }
+}
+
+.navegacion:target{
+    display: block;
+}
+
+.navegacion{
+    display: none;
+}
+
+@media (min-width:768px) {
+    .navegacion{
+        display: block;
+    }
 }
 
 /* Iconos nosotros */
 
-.iconos-nosotros{
-    display: flex;
-    justify-content: space-between;
+@media (min-width:768px) {
+    .iconos-nosotros{
+        display: flex;
+        justify-content: space-between;
+    }   
 }
 
 .icono{
-    flex-basis: calc(33.3% - 1rem);
     text-align: center;
+}
+
+@media (min-width:768px) {
+    .icono{
+        flex-basis: calc(33.3% - 1rem);
+    }
 }
 
 .icono h3{
@@ -137,17 +189,24 @@ h4{
 
 /* Cards */
 
-.card-container{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+@media (min-width:768px) {
+    .card-container{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }   
 }
 
 .card{
-    flex-basis: calc(33.3% - 1rem);
     border: 1px solid #b5b5b5;
     background-color: #f5f5f5;
     margin-bottom: 2rem;
+}
+
+@media (min-width:768px) {
+    .card{
+        flex-basis: calc(33.3% - 1rem);
+    }
 }
 
 .card-description{
@@ -191,6 +250,15 @@ h4{
     margin-top: 3rem;
     display: inline-block;
     text-align: center;
+    display: block;
+    flex-basis: 100%;
+}
+
+@media (min-width:768px) {
+    .btn{
+        display: inline-block;
+        flex-basis: auto;
+    }
 }
 
 .btn:hover{
@@ -224,7 +292,7 @@ h4{
 }
 
 .contact-description{
-    flex: 1;
+    flex-basis: 95%;
     color: #ffff;
 }
 
@@ -234,35 +302,44 @@ h4{
 
 /* Section Bottom */
 
-.section-bottom{
-    display: flex;
-    justify-content: space-between;
-}
-
-.blog{
-    flex-basis: 60%;
-}
-
-.testimoniales{
-    flex-basis: calc(40% - 2rem);
+@media (min-width:768px) {
+    .section-bottom{
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .blog{
+        flex-basis: 60%;
+    }
+    
+    .testimoniales{
+        flex-basis: calc(40% - 2rem);
+    }    
 }
 
 .entrada-blog{
-    display: flex;
-    justify-content: space-between;
     margin-bottom: 2rem;
+}
+
+@media (min-width:768px) {
+    .entrada-blog{
+        display: flex;
+        justify-content: space-between;
+    }
 }
 
 .entrada-blog:last-of-type{
     margin-bottom: 0;
 }
 
-.img{
-    flex-basis: 40%;
-}
-
-.texto-entrada{
-    flex-basis: calc(60% - 3rem);
+@media (min-width:768px) {
+    .img{
+        flex-basis: 40%;
+    }
+    
+    .texto-entrada{
+        flex-basis: calc(60% - 3rem);
+    }   
 }
 
 .texto-entrada a{
@@ -331,10 +408,26 @@ h4{
     margin: 0;
 }
 
+.site-footer nav{
+    display: none;
+}
+
+@media (min-width:768px) {
+    .site-footer nav{
+        display: block;
+    }
+}
+
 .footer-container{
     padding: 3rem 0;
-    display: flex;
-    justify-content: space-between;
+    text-align: center;
+}
+
+@media (min-width:768px) {
+    .footer-container{
+        display: flex;
+        justify-content: space-between;
+    }
 }
 
 .site-footer p{
@@ -348,10 +441,12 @@ h4{
 
 /*Nosotros*/
 
-.contenido-nosotros{
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-column-gap: 2rem;
+@media (min-width:768px) {
+    .contenido-nosotros{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-column-gap: 2rem;
+    }    
 }
 
 .texto-nosotros blockquote{
